# quack

./: .gitignore  README.md  build.gradle  settings.gradle
duktape/: build.gradle
duktape-java/: build.gradle
duktape-java/src/test/java/com/koushikdutta/duktape/: DuktapeTests.kt  JavaTests.java
duktape-jni/: build.gradle
duktape-jni/src/main/cpp/: duktape.cpp  quickjs.cpp
duktape/src/androidTest/java/com/koushikdutta/quack/: QuackTests.java  StreamUtility.java
duktape/src/androidTest/java/com/squareup/duktape/: DuktapeTests.java  StreamUtility.java
duktape/src/main/java/com/koushikdutta/quack/: JavaMethodObject.java  Memoize.java  QuackCoercion.java  QuackContext.java  QuackInvocationHandlerWrapper.java  QuackReadonlyObject.java
duktape/src/main/java/com/squareup/duktape/: Duktape.java  DuktapeCoercion.java  DuktapeException.java  DuktapeFunction.java  DuktapeInvocationHandlerWrapper.java  DuktapeJavaObject.java  DuktapeJsonObject.java  DuktapeMethodCoercion.java  DuktapeMethodName.java  DuktapeMethodObject.java  DuktapeObject.java  DuktapeProperty.java  DuktapeReadonlyObject.java  JavaFunction.java  JavaMethodObject.java  JavaObject.java  JavaScriptObject.java  Memoize.java  MemoizeFunc.java
duktape/src/main/jni/: CMakeLists.txt  DuktapeContext.cpp  DuktapeContext.h  JSContext.h  context-jni.cpp  duktape-jni.cpp
duktape/src/main/jni/duktape/: duk_trans_socket.h  duk_trans_socket_unix.c
duktape/src/main/jni/duktape-jni/: DuktapeContext.cpp  DuktapeContext.h  StackChecker.h  duktape-jni.cpp
duktape/src/main/jni/java/: JString.h  JavaExceptions.cpp  JavaExceptions.h  JavaType.cpp  JavaType.h
duktape/src/main/jni/quickjs-jni/: QuickJSContext.cpp  QuickJSContext.h  quickjs-jni.cpp
gradle/wrapper/: gradle-wrapper.properties
quack-android/: build.gradle
quack-android/src/main/: AndroidManifest.xml
quack-android/src/main/jni/: CMakeLists.txt
quack-java/: build.gradle
quack-java/src/main/java/com/koushikdutta/quack/: Extensions.kt  JSValue.java  JavaMethodObject.java  JavaObject.java  JavaScriptObject.java  MemoizeFunc.java  QuackContext.java  QuackException.java  QuackJavaObject.java  QuackJavaScriptObject.java  QuackJsonObject.java  QuackMethodCoercion.java  QuackMethodName.java  QuackMethodObject.java  QuackObject.java  QuackPromise.java  QuackPromiseReceiver.java  QuackProperty.java  WeakExactHashMap.java
quack-java/src/main/java/com/koushikdutta/quack/polyfill/: JsonDeserializer.java  JsonSerializer.java
quack-java/src/main/java/com/koushikdutta/quack/polyfill/timeout/: ClearTimeout.java  JobCanceller.java  JobScheduler.java  SetImmediate.java  SetTimeout.java
quack-java/src/main/java/com/koushikdutta/quack/polyfill/xmlhttprequest/: HttpProvider.java  XMLHttpRequest.java
quack-java/src/test/java/com/koushikdutta/quack/: CRC32.java  MpegTsTests.kt  QuackKotlinTests.kt  QuackTests.java  WeakExactHashMapTests.java
quack-jni/: build.gradle
quack-jni/src/main/cpp/: duktape.cpp
quack-jni/src/main/jni/: JSContext.h  context-jni.cpp
quack-jni/src/main/jni/duktape/: duk_config.h  duk_trans_socket.h
quack-jni/src/main/jni/duktape-jni/: DuktapeContext.cpp  DuktapeContext.h  StackChecker.h
quack-jni/src/main/jni/duktape-jni/java/: GlobalRef.cpp  JavaExceptions.h  JavaType.cpp  JavaType.h
quack-jni/src/main/jni/quickjs-jni/: QuickJSContext.cpp  QuickJSContext.h
quack-polyfill/: .gitignore  build.gradle
quack-polyfill/src/js/: package-lock.json  package.json  quackpack.js  require.js
quack-polyfill/src/main/java/com/koushikdutta/quack/polyfill/: ArgParser.kt  EventEmitter.kt  Extend.kt  Json.kt  QuackEventLoop.kt  Streams.kt
quack-polyfill/src/main/java/com/koushikdutta/quack/polyfill/crypto/: CryptoModule.kt
quack-polyfill/src/main/java/com/koushikdutta/quack/polyfill/dgram/: DgramModule.kt
quack-polyfill/src/test/java/com/koushikdutta/quack/polyfill/: Digest.kt  PolyfillTests.kt  StreamUtility.java  TorrentCallback.java  ValueCallback.java  WebTorrent.kt
tests/src/androidTest/java/com/squareup/duktape/: DuktapeGetTest.java  DuktapeSetTest.java  DuktapeTest.java
(+14 files in other folders)
